# WorkWiz

./: README.md
backend/: alembic.ini  authentication.py  db.py  dependencies.py  main.py  mixins.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0cf25e8dec31_v2_initial_migration.py  12cd3cbbaf2e_initial_migration.py  5285661ea2d6_added_new_column.py  97a19aeda0db_added_authenticatioc.py
backend/routes/: auth.py  projects.py  schemas.py  tasks.py  users.py
backend/routes/utils/: auth.py  projects.py  tasks.py  users.py
